@@ -1760,3 +1760,5 @@
 20070606 man/fuse.1: indentation fixes (Stuart).
 20070606 man/fuse.1: various formatting fixes (Stuart).
 20070606 man/fuse.1: spelling fixes (Stuart).
+20070608 widget/filesel.c: use more native ASL requester on the Amiga in the
+         widget UI (more of patch #1712260) (Chris Young).
